syntax = "proto3";
package xorkevin.bitcensus.parity.v0;

option go_package = "xorkevin.dev/bitcensus/pb/parityv0";

message IndexPacket {
  uint64 block_size = 1;
  uint64 shard_count = 2;
  uint64 recovery_shard_count = 3;
  string code_matrix_kind = 4;
  string input_file_hash = 5;
  uint64 input_file_size = 6;
}
